[package]
name = "btc_analyzer"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin-explorer = "0.1.32"
bitcoin = "0.27"
log = "0.4"
chrono = "0.4"
indicatif = "0.16"
simple_logger = "1.13.0"
siphasher = "0.3"
