[package]
name = "address_cluster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin-explorer = { version = "^1.2.11", default-features = false }
log = "0.4"
indicatif = "^0.16"
par-iter-sync = "^0.1"
simple_logger = "1.13.0"
ahash = "0.7.4"
hash_hasher = "2.0.3"
ena = { path = "./ena" }
chrono = "0.4"
rayon = "1.5"
crossbeam = "^0.8"
rustc-hash = "1.1.0"
rocksdb = "^0.17"
num_cpus = "^1.13"
query_address = { path = "./query_address" }

[[bin]]
name = "analyzer"
path = "./src/main.rs"

[[bin]]
name = "query_address"
path = "./query_main/src/main.rs"
