[package]
name = "address_cluster"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin-explorer = { version = "=1.2.8", default-features = false }
log = "0.4"
indicatif = "0.16"
par-iter-sync = "^0.1"
simple_logger = "1.13.0"
ahash = "0.7.4"
hash_hasher = "2.0.3"
ena = "0.14.0"
