[package]
name = "query_address"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
indicatif = "^0.16"
simple_logger = "1.13.0"
rocksdb = "^0.17"
num_cpus = "^1.13"

[lib]
name = "query_address"

[features]
debug = []
